Fix tap secret label in dark mode

--- a/web-interface/public/static/css/dark.css
+++ b/web-interface/public/static/css/dark.css
@@ -323,3 +323,7 @@ ul.pagination li.page-item a.page-link:hover {
 ul.pagination li.disabled a.page-link {
     color: #7e7e7e;
 }
+
+div.tap-secret label {
+    color: #111;
+}
